--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="card">
+		<img src=" " alt= "img">
+		<h1>Pricing Card</h1>
+		<p> Price : Rs 200</p>
+		<p>Description: lorem  A brief description of the product or service, also enclosed within a paragraph tag.</p>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
